--- a/src/components/ui/collapsible.astro
+++ b/src/components/ui/collapsible.astro
@@ -1,22 +1,18 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { twMerge } from 'tailwind-merge';
 
 type Props = HTMLAttributes<'div'>;
-
-const id = crypto.randomUUID();
-const { class: className, ...props } = Astro.props;
 ---
 
 <div
-  {...props}
+  {...Astro.props}
   x-data="{ expanded: false }"
+  x-id="['collapsible']"
   x-init=`() => {
-    $el.firstElementChild?.setAttribute("aria-controls", "${id}");
+    $el.firstElementChild?.setAttribute("aria-controls", $id('collapsible'));
     $el.firstElementChild?.addEventListener("click", () => expanded = !expanded);
   }`
-  class={twMerge('', className)}
 >
   <slot name="collapsible-trigger" />
-  <div {id} x-show="expanded" x-collapse x-cloak class="[&[x-cloak]]:hidden"><slot /></div>
+  <div :id="$id('collapsible')" x-show="expanded" x-collapse x-cloak><slot /></div>
 </div>
