--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -18,11 +18,15 @@ import type { GetStaticPaths } from 'astro';
 import { Image } from 'astro:assets';
 import { getCollection, type CollectionEntry } from 'astro:content';
 import { Calendar, ChevronRight, Clock4, Eye, Github, Linkedin, Mail, Rss, Twitter } from 'lucide-astro';
+import { twJoin } from 'tailwind-merge';
+import { tv } from 'tailwind-variants';
 
 type Post = CollectionEntry<'posts'>;
 type Props = { post: Post; prev: Post; next: Post };
 
 const social = buttonVariants({ size: 'icon', color: 'ghost', class: '[&_svg]:size-3.5 size-6' });
+const text = tv({ base: '[&>p]:text-1/85 [&_p_a]:underline' });
+const orderedList = tv({ base: '[&_ol]:list-decimal [&_ol]:list-inside' });
 
 export const getStaticPaths: GetStaticPaths = async () =>
   getCollection('posts').then((posts) =>
@@ -70,7 +74,7 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
       </TableOfContents.Root>
     </Collapsible>
     <Separator class="my-4 lg:hidden" />
-    <div class="flex max-w-[70ch] flex-col gap-8 leading-7 [&>p]:text-1/85 [&_p_a]:underline">
+    <div class={twJoin('flex max-w-[70ch] flex-col gap-8 leading-7', text(), orderedList())}>
       <Content
         components={{
           h2: PostSubheader,
