--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -34,14 +34,15 @@ const {
     <meta name="viewport" content="width=device-width" />
     <meta name="title" content={title} />
     <meta name="description" content={description} />
-    <meta name="og:type" content="website" />
-    <meta name="og:title" content={title} />
-    <meta name="og:description" content={description} />
-    <meta name="og:image" content={new URL(og, Astro.site)} />
-    <meta name="og:image:alt" content={title} />
-    <meta name="og:site_name" content={Astro.site} />
-    <meta name="og:image:width" content="1280" />
-    <meta name="og:image:height" content="675" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:site_name" content={Astro.site} />
+    <meta property="og:url" content={new URL(og, Astro.site)} />
+    <meta property="og:image" content={new URL(og, Astro.site)} />
+    <meta property="og:image:alt" content={title} />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="675" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content={`@${import.meta.env.USERNAME}`} />
     <meta name="twitter:title" content={title} />
