--- a/src/components/ui/separator.astro
+++ b/src/components/ui/separator.astro
@@ -13,4 +13,4 @@ type Props = HTMLAttributes<'div'> & VariantProps<typeof variants>;
 const { class: className, orientation, ...props } = Astro.props;
 ---
 
-<div {...props} role="presentation" class={variants({ orientation, className })}></div>
+<div {...props} role="separator" class={variants({ orientation, className })}></div>
