--- a/src/components/ui/datalist/components/root.astro
+++ b/src/components/ui/datalist/components/root.astro
@@ -1,7 +1,7 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
 
-type Props = HTMLAttributes<'ul'>;
+type Props = HTMLAttributes<'dl'>;
 ---
 
-<ul {...Astro.props}><slot /></ul>
+<dl {...Astro.props}><slot /></dl>
