--- a/src/components/ui/datalist/components/value.astro
+++ b/src/components/ui/datalist/components/value.astro
@@ -1,7 +1,7 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
 
-type Props = HTMLAttributes<'span'>;
+type Props = HTMLAttributes<'dd'>;
 ---
 
-<span {...Astro.props}><slot /></span>
+<dd {...Astro.props}><slot /></dd>
