--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -22,7 +22,7 @@ const topics = [...new Set(posts.flatMap((post) => post.data.topics))].sort();
 <Layout title="Blog | Christian Penrod" class="mx-auto lg:max-w-screen-xl lg:px-20">
   <section>
     <Text as="h1">BLOG POSTS</Text>
-    <Text as="p" class="text-2">Explore various sofware-related posts.</Text>
+    <Text as="h2" class="text-2 text-sm">Explore various sofware-related posts.</Text>
   </section>
   <Separator class="mb-8 mt-4 lg:mb-12" />
   <div class="grid gap-10 lg:grid-cols-[1fr_30%] xl:gap-20">
