--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -1,9 +1,10 @@
 ---
-import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 import { Calendar, Clock4 } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
+import Date from './ui/date.astro';
 import Separator from './ui/separator.astro';
+import Text from './ui/text.astro';
 
 type Props = { post: CollectionEntry<'posts'> };
 
@@ -15,27 +16,23 @@ const { remarkPluginFrontmatter } = await post.render();
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
   class={twJoin(
-    'group flex h-full select-none flex-col overflow-hidden rounded border',
-    'focus-visible:outline-none focus-visible:ring-2',
+    'group flex h-full select-none flex-col overflow-hidden rounded border shadow',
+    'focus-visible:outline-none focus-visible:ring-1',
   )}
 >
-  <div class="h-14 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
-    <Image src={post.data.cover} alt="Post Cover" class="rounded-t" width={2048} height={2048} />
-  </div>
+  <div class="h-8 rounded-t bg-2"></div>
   <div class="z-20 flex flex-1 flex-col gap-2 border-t bg-1 p-4">
-    <span class="text-xs group-hover:text-emphasis motion-safe:transition-colors">
-      {post.data.title}
-    </span>
-    <p class="flex-1 text-xxs text-2">{post.data.description}</p>
+    <Text class="text-sm group-hover:text-brand motion-safe:transition-colors">{post.data.title}</Text>
+    <Text as="p" class="flex-1 text-2 text-xs">{post.data.description}</Text>
     <Separator class="my-1.5" />
-    <div class="flex justify-between gap-4 text-xxs text-2">
+    <div class="flex justify-between gap-4 text-2 text-xs">
       <div class="flex items-center gap-2">
-        <Calendar class="shrink-0" size={14} aria-hidden />
-        <time datetime={post.data.published.iso}>{post.data.published.pretty}</time>
+        <Calendar class="size-3.5 shrink-0" aria-hidden />
+        <Date value={post.data.published} />
       </div>
       <div class="flex items-center gap-2">
-        <Clock4 class="shrink-0" size={14} aria-hidden />
-        <span>{remarkPluginFrontmatter.readingTime}</span>
+        <Clock4 class="size-3.5 shrink-0" aria-hidden />
+        <Text>{remarkPluginFrontmatter.readingTime}</Text>
       </div>
     </div>
   </div>
