--- a/src/components/ui/code/components/block.astro
+++ b/src/components/ui/code/components/block.astro
@@ -12,9 +12,9 @@ const { class: className, ...props } = Astro.props;
   class={twMerge(
     'font-sans [counter-reset:line] [font-size:--shiki-font-size]',
     'bg-[--shiki-color-background] [&:not(&:has(span))]:text-[--shiki-color-text]',
-    '[&:not(&:has(span))]:mx-0.5 [&:not(&:has(span))]:rounded [&:not(&:has(span))]:border',
-    '[&:not(&:has(span))]:decoration-clone [&:not(&:has(span))]:px-1 [&:not(&:has(span))]:py-px',
-    '[&:not(&:has(span))]:whitespace-nowrap',
+    '[&:not(&:has(span))]:inline-flex [&:not(&:has(span))]:rounded [&:not(&:has(span))]:border',
+    '[&:not(&:has(span))]:mx-0.5 [&:not(&:has(span))]:whitespace-nowrap [&:not(&:has(span))]:px-1',
+    '[&:not(&:has(span))]:decoration-clone',
     className,
   )}
 >
